@@ -1,6 +1,6 @@
 /*
  *  R : A Computer Language for Statistical Data Analysis
- *  Copyright (C) 2000-10   The R Development Core Team.
+ *  Copyright (C) 2000-11   The R Development Core Team.
  *
  *  This program is free software; you can redistribute it and/or modify
  *  it under the terms of the GNU General Public License as published by
@@ -3194,6 +3194,11 @@ int Rconn_printf(Rconnection con, const char *format, ...)
     return res;
 }
 
+static void con_cleanup(void *data)
+{
+    Rconnection con = data;
+    if(con->isopen) con->close(con);
+}
 
 /* readLines(con = stdin(), n = 1, ok = TRUE, warn = TRUE) */
 #define BUF_SIZE 1000
@@ -3206,6 +3211,7 @@ SEXP attribute_hidden do_readLines(SEXP call, SEXP op, SEXP args, SEXP env)
     Rboolean wasopen;
     char *buf;
     const char *encoding;
+    RCNTXT cntxt;
 
     checkArity(op, args);
     if(!inherits(CAR(args), "connection"))
@@ -3220,8 +3226,6 @@ SEXP attribute_hidden do_readLines(SEXP call, SEXP op, SEXP args, SEXP env)
     warn = asLogical(CADDDR(args));
     if(warn == NA_LOGICAL)
 	error(_("invalid '%s' argument"), "warn");
-    if(!con->canread)
-	error(_("cannot read from this connection"));
     if(!isString(CAD4R(args)) || LENGTH(CAD4R(args)) != 1)
 	error(_("invalid '%s' value"), "encoding");
     encoding = CHAR(STRING_ELT(CAD4R(args), 0)); /* ASCII */
@@ -3233,12 +3237,16 @@ SEXP attribute_hidden do_readLines(SEXP call, SEXP op, SEXP args, SEXP env)
 	strcpy(con->mode, "rt");
 	if(!con->open(con)) error(_("cannot open the connection"));
 	strcpy(con->mode, mode);
-	if(!con->canread) { /* recheck */
-	    con->close(con);
-	    error(_("cannot read from this connection"));
-	}
-    } else { /* for a non-blocking connection, more input may
-		have become available, so re-position */
+	/* Set up a context which will close the connection on error */
+	begincontext(&cntxt, CTXT_CCODE, R_NilValue, R_BaseEnv, R_BaseEnv,
+		     R_NilValue, R_NilValue);
+	cntxt.cend = &con_cleanup;
+	cntxt.cenddata = con;
+	if(!con->canread) error(_("cannot read from this connection"));
+    } else { 
+	if(!con->canread) error(_("cannot read from this connection"));
+	/* for a non-blocking connection, more input may
+	   have become available, so re-position */
 	if(con->canseek && !con->blocking)
 	    con->seek(con, con->seek(con, -1, 1, 1), 1, 1);
     }
@@ -3275,12 +3283,12 @@ SEXP attribute_hidden do_readLines(SEXP call, SEXP op, SEXP args, SEXP env)
 	SET_STRING_ELT(ans, nread, mkCharCE(buf, oenc));
 	if(c == R_EOF) goto no_more_lines;
     }
+    if(!wasopen) {endcontext(&cntxt); con->close(con);}
     UNPROTECT(1);
     free(buf);
-    if(!wasopen) con->close(con);
     return ans;
 no_more_lines:
-    if(!wasopen) con->close(con);
+    if(!wasopen) {endcontext(&cntxt); con->close(con);}
     if(nbuf > 0) { /* incomplete last line */
 	if(con->text && !con->blocking) {
 	    /* push back the rest */
@@ -3311,6 +3319,7 @@ SEXP attribute_hidden do_writelines(SEXP call, SEXP op, SEXP args, SEXP env)
     Rconnection con=NULL;
     const char *ssep;
     SEXP text, sep;
+    RCNTXT cntxt;
 
     checkArity(op, args);
     text = CAR(args);
@@ -3325,8 +3334,6 @@ SEXP attribute_hidden do_writelines(SEXP call, SEXP op, SEXP args, SEXP env)
     if(useBytes == NA_LOGICAL)
 	error(_("invalid '%s' argument"), "useBytes");
 
-    if(!con->canwrite)
-	error(_("cannot write to this connection"));
     wasopen = con->isopen;
     if(!wasopen) {
 	char mode[5];
@@ -3335,11 +3342,13 @@ SEXP attribute_hidden do_writelines(SEXP call, SEXP op, SEXP args, SEXP env)
 	strcpy(con->mode, "wt");
 	if(!con->open(con)) error(_("cannot open the connection"));
 	strcpy(con->mode, mode);
-	if(!con->canwrite) { /* unlikely, but be safe */
-	    con->close(con);
-	    error(_("cannot write to this connection"));
-	}
+	/* Set up a context which will close the connection on error */
+	begincontext(&cntxt, CTXT_CCODE, R_NilValue, R_BaseEnv, R_BaseEnv,
+		     R_NilValue, R_NilValue);
+	cntxt.cend = &con_cleanup;
+	cntxt.cenddata = con;
     }
+    if(!con->canwrite) error(_("cannot write to this connection"));
     if(useBytes)
 	ssep = CHAR(STRING_ELT(sep, 0));
     else
@@ -3367,7 +3376,7 @@ SEXP attribute_hidden do_writelines(SEXP call, SEXP op, SEXP args, SEXP env)
 			 translateChar(STRING_ELT(text, i)), ssep);
     }
 
-    if(!wasopen) con->close(con);
+    if(!wasopen) {endcontext(&cntxt); con->close(con);}
     return R_NilValue;
 }
 
@@ -3456,6 +3465,7 @@ SEXP attribute_hidden do_readbin(SEXP call, SEXP op, SEXP args, SEXP env)
     Rboolean wasopen = TRUE, isRaw = FALSE;
     Rconnection con = NULL;
     Rbyte *bytes = NULL;
+    RCNTXT cntxt;
 
     checkArity(op, args);
 
@@ -3483,8 +3493,6 @@ SEXP attribute_hidden do_readbin(SEXP call, SEXP op, SEXP args, SEXP env)
     if(swap == NA_LOGICAL)
 	error(_("invalid '%s' argument"), "swap");
     if(!isRaw) {
-	if(!con->canread)
-	    error(_("cannot read from this connection"));
 	wasopen = con->isopen;
 	if(!wasopen) {
 	    /* Documented behaviour */
@@ -3493,11 +3501,13 @@ SEXP attribute_hidden do_readbin(SEXP call, SEXP op, SEXP args, SEXP env)
 	    strcpy(con->mode, "rb");
 	    if(!con->open(con)) error(_("cannot open the connection"));
 	    strcpy(con->mode, mode);
-	    if(!con->canread) {
-		con->close(con);
-		error(_("cannot read from this connection"));
-	    }
+	    /* Set up a context which will close the connection on error */
+	    begincontext(&cntxt, CTXT_CCODE, R_NilValue, R_BaseEnv, R_BaseEnv,
+			 R_NilValue, R_NilValue);
+	    cntxt.cend = &con_cleanup;
+	    cntxt.cenddata = con;
 	}
+	if(!con->canread) error(_("cannot read from this connection"));
     }
 
     if(!strcmp(what, "character")) {
@@ -3654,7 +3664,7 @@ SEXP attribute_hidden do_readbin(SEXP call, SEXP op, SEXP args, SEXP env)
 	    }
 	}
     }
-    if(!wasopen) con->close(con);
+    if(!wasopen) {endcontext(&cntxt); con->close(con);}
     if(m < n) {
 	PROTECT(ans = lengthgets(ans, m));
 	UNPROTECT(1);
@@ -3672,6 +3682,7 @@ SEXP attribute_hidden do_writebin(SEXP call, SEXP op, SEXP args, SEXP env)
     char *buf;
     Rboolean wasopen = TRUE, isRaw = FALSE;
     Rconnection con = NULL;
+    RCNTXT cntxt;
 
     checkArity(op, args);
     object = CAR(args);
@@ -3684,8 +3695,7 @@ SEXP attribute_hidden do_writebin(SEXP call, SEXP op, SEXP args, SEXP env)
 	con = getConnection(asInteger(CADR(args)));
 	if(con->text) error(_("can only write to a binary connection"));
 	wasopen = con->isopen;
-	if(!con->canwrite)
-	    error(_("cannot write to this connection"));
+	if(!con->canwrite) error(_("cannot write to this connection"));
     }
 
     size = asInteger(CADDR(args));
@@ -3714,10 +3724,12 @@ SEXP attribute_hidden do_writebin(SEXP call, SEXP op, SEXP args, SEXP env)
 	strcpy(con->mode, "wb");
 	if(!con->open(con)) error(_("cannot open the connection"));
 	strcpy(con->mode, mode);
-	if(!con->canwrite) {
-	    con->close(con);
-	    error(_("cannot write to this connection"));
-	}
+	/* Set up a context which will close the connection on error */
+	begincontext(&cntxt, CTXT_CCODE, R_NilValue, R_BaseEnv, R_BaseEnv,
+		     R_NilValue, R_NilValue);
+	cntxt.cend = &con_cleanup;
+	cntxt.cenddata = con;
+	if(!con->canwrite) error(_("cannot write to this connection"));
     }
 
 
@@ -3907,7 +3919,7 @@ SEXP attribute_hidden do_writebin(SEXP call, SEXP op, SEXP args, SEXP env)
 	Free(buf);
     }
 
-    if(!wasopen) con->close(con);
+    if(!wasopen) {endcontext(&cntxt);con->close(con);}
     if(isRaw) {
 	R_Visible = TRUE;
 	UNPROTECT(1);
@@ -4010,6 +4022,7 @@ SEXP attribute_hidden do_readchar(SEXP call, SEXP op, SEXP args, SEXP env)
     Rboolean wasopen = TRUE, isRaw = FALSE;
     Rconnection con = NULL;
     Rbyte *bytes = NULL;
+    RCNTXT cntxt;
 
     checkArity(op, args);
 
@@ -4038,11 +4051,13 @@ SEXP attribute_hidden do_readchar(SEXP call, SEXP op, SEXP args, SEXP env)
 	    strcpy(con->mode, "rb");
 	    if(!con->open(con)) error(_("cannot open the connection"));
 	    strcpy(con->mode, mode);
-	    if(!con->canread) {
-		con->close(con);
-		error(_("cannot read from this connection"));
-	    }
+	    /* Set up a context which will close the connection on error */
+	    begincontext(&cntxt, CTXT_CCODE, R_NilValue, R_BaseEnv, R_BaseEnv,
+			 R_NilValue, R_NilValue);
+	    cntxt.cend = &con_cleanup;
+	    cntxt.cenddata = con;
 	}
+	if(!con->canread) error(_("cannot read from this connection"));
     }
     if (mbcslocale && !utf8locale && !useBytes)
 	warning(_("can only read in bytes in a non-UTF-8 MBCS locale" ));
@@ -4058,7 +4073,8 @@ SEXP attribute_hidden do_readchar(SEXP call, SEXP op, SEXP args, SEXP env)
 	    m++;
 	} else break;
     }
-    if(!wasopen) con->close(con);
+
+    if(!wasopen) {endcontext(&cntxt); con->close(con);}
     if(m < n) {
 	PROTECT(ans = lengthgets(ans, m));
 	UNPROTECT(1);
@@ -4077,6 +4093,7 @@ SEXP attribute_hidden do_writechar(SEXP call, SEXP op, SEXP args, SEXP env)
     Rboolean wasopen = TRUE, usesep, isRaw = FALSE;
     Rconnection con = NULL;
     mbstate_t mb_st;
+    RCNTXT cntxt;
 
     checkArity(op, args);
     object = CAR(args);
@@ -4147,10 +4164,12 @@ SEXP attribute_hidden do_writechar(SEXP call, SEXP op, SEXP args, SEXP env)
 	strcpy(con->mode, "wb");
 	if(!con->open(con)) error(_("cannot open the connection"));
 	strcpy(con->mode, mode);
-	if(!con->canwrite) {
-	    con->close(con);
-	    error(_("cannot write to this connection"));
-	}
+	/* Set up a context which will close the connection on error */
+	begincontext(&cntxt, CTXT_CCODE, R_NilValue, R_BaseEnv, R_BaseEnv,
+		     R_NilValue, R_NilValue);
+	cntxt.cend = &con_cleanup;
+	cntxt.cenddata = con;
+	if(!con->canwrite) error(_("cannot write to this connection"));
     }
 
 
@@ -4211,13 +4230,13 @@ SEXP attribute_hidden do_writechar(SEXP call, SEXP op, SEXP args, SEXP env)
 		nwrite = con->write(buf, sizeof(char), lenb, con);
 		if(!nwrite) {
 		    warning(_("problem writing to connection"));
-		break;
+		    break;
 		}
 	    } else
 		buf += lenb;
 	}
     }
-    if(!wasopen) con->close(con);
+    if(!wasopen) {endcontext(&cntxt); con->close(con);}
     if(isRaw) {
 	R_Visible = TRUE;
 	UNPROTECT(1);
